# trubackup

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  azure-pipelines.yml  build-image  flake.nix  pyproject.toml  requirements.txt  shell.nix
.circleci/: config.yml
.github/workflows/: lint.yml  python-app.yml
contrib/: delete_old.py
edxbackup/: backup.py  cli.py  config.py  context.py  info.py  localfs.py  mongo.py  mysql.py  options.py  postgresql.py  restore.py  s3.py  utils.py
edxbackup/restic/: backup.py  restore.py  snapshot.py
egg/: README.md  requirements.txt  settings.py  setup.py
egg/edx_backup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
egg/edxbackup/: bookkeeping.py  cli.py  config.py  edx.py  info.py  mongo.py  mysql.py  options.py  rclone.py  retention.py  s3.py  swift.py  utils.py
egg/edxbackup/scripts/: dump_mysql.py  restore_mysql.py
egg/edxbackup/tests/: conf.json  dump_conf.json  lms.auth.json  lms.auth.restore.json  test_bookkeeping.py  test_parse.py  test_retention.py
example/: trubackup.json
src/scripts/: dump_mongo.py  restore_mongo.py
systemd/: edxbackup.service  edxbackup.timer  trubackup.service  trubackup.timer
tests/: .env  docker-compose.yml  dump_conf.json  dump_dbs.sh  edxbackup.json  insert_mongo_test_data.sh  insert_mysql_test_data.sh  integration.sh  populate.sh  populate_dbs.sh  rclone.conf  restore_conf.json  retention.py  run_backup.sh  run_restore.sh  start_servers.sh  start_swift_server.sh  stop_servers.sh  test.env  testenv.sh  variables.sh  wait-for-swift.sh
trubackup/: backup.py  cli.py  config.py  context.py  info.py  localfs.py  mongo.py  mysql.py  options.py  postgresql.py  restore.py  s3.py
trubackup/restic/: restore.py  snapshot.py
