[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "trubackup"
authors = [
    {name = "Illia Shestakov", email = "i.shestakov@abstract-technology.de"},
]
description = "Piping backup tool wrapped around restic"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "click",
    "pydantic",
	"s3ball>=0.1.1",
]
dynamic = ["version", "readme"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "trubackup.VERSION"}
readme = {file = ["README.rst"]}

[project.scripts]
trubackup = "trubackup.cli:main"
